--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -80,15 +80,15 @@
             </ul>
           </div>
           <div class="operations">
-            <a href="/login">
-                <i class='bx bxs-user-circle login-icon'></i>
-                Login
-            </a>
-            <a href="/customerRegister">
-                <i class='bx bxs-user-plus register-icon'></i>
-                Register
-            </a>
-          </div>
+				<a href="/login">
+					<i class='bx bxs-user-circle user-icon'></i>
+					<span th:text="${username}"></span>
+				</a>
+				<a href="/customerRegister">
+					<i class='bx bx-log-out exit-icon'></i>
+					Log Out
+				</a>
+			</div>
         </div>
       </nav>
 	<!--	End Navbar-->
