--- a/src/main/resources/templates/customerEdit.html
+++ b/src/main/resources/templates/customerEdit.html
@@ -73,9 +73,9 @@
 				</ul>
 			</div>
 			<div class="operations">
-				<a th:href="@{'/userPage/' + ${username}}">
+				<a th:href="@{'/userPage/' + ${customer.username}}">
 					<i class='bx bxs-user-circle user-icon'></i>
-					<span th:text="${username}"></span>
+					<span th:text="${customer.username}"></span>
 				</a>
 				<a href="/index">
 					<i class='bx bx-log-out exit-icon'></i>
